changing small frontend things still issue with the scrollbar on the side

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,6 +25,7 @@ body {
  margin-top: 10px;
  margin-bottom: 10px;
  border-radius: 16px;
+ overflow-y: scroll;
 }
 
 .slogan {
