--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -15,7 +15,7 @@
 }
 
 .navbar-light .navbar-toggler {
-    color: #2292A4;
+    color: #DC3C18;
     border-color: #DC3C18;
     border: solid;
     border-radius: 5px;
